# aquila-audit

./: .gitignore  .vscode  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
data/certificates/: private.key  signature.pem
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml  requirements.txt
scripts/: health_check.py  seed_data.py  setup_dashboard.py  setup_database.sh  setup_reporting_queue.sh  setup_week10.sh  setup_week11.sh  start_services.sh  test_dashboard.py  test_reporting_features.py
services/admin_service/: config.py  main.py
services/admin_service/dashboards/: usage_dashboard.py
services/admin_service/dependencies/: auth.py
services/admin_service/managers/: role_manager.py  tenant_manager.py  user_manager.py
services/admin_service/routes/: dashboard_routes.py
services/api_gateway/: config.py  main.py
services/api_gateway/dependencies/: auth.py  tenant.py
services/api_gateway/routes/: auth.py  upload.py
services/billing_service/: config.py  main.py
services/llm_service/: config.py  main.py
services/ml_service/: config.py  main.py
services/reporting_service/: config.py  main.py
services/rule_engine/: config.py  main.py
services/worker_service/: celery_app.py  main.py
shared/auth/: jwt_handler.py  mfa.py  middleware.py  password.py  rbac.py
shared/database/: alembic.ini  base.py  session.py
shared/messaging/: event_publisher.py  message_formats.py  rabbitmq_client.py
shared/models/: __init__.py  base.py  billing_models.py  file_models.py  finding_models.py  report_models.py  rule_models.py  schemas.py  user_models.py
shared/storage/: file_manager.py  local_storage.py  tenant_isolation.py
shared/utils/: config.py  logging.py  security.py
(+57 files in other folders)
